--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-html5video": "^2.5.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "swiper": "^8.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
